Fixing spacing.

--- a/app/javascript/stylesheets/light/tailwind/components.scss
+++ b/app/javascript/stylesheets/light/tailwind/components.scss
@@ -47,7 +47,7 @@
   }
 
   form.form {
-    @apply -mt-5 space-y-5;
+    @apply space-y-5;
     .buttons {
       @apply pt-1 space-x;
     }
